--- a/pod.yaml
+++ b/pod.yaml
@@ -1,18 +1,20 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: task-pv-storage
+  name: task-pv-pod
 spec:
   containers:
-    - name: task-pv-storage
+    - name: task-pv-container
       image: nginx
       ports:
         - containerPort: 80
           name: http-server
       volumeMounts:
         - mountPath: "/usr/share/nginx/html"
-          name: myvolume
+          name: task-pv-storage
   volumes:
-    - name: myvolume
+    - name: task-pv-storage
       persistentVolumeClaim:
         claimName: task-pv-claim
+  nodeSelector:
+    nodename: node1
